--- a/index.html
+++ b/index.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="title">MA – Inteligência Jurídica | Contratos, Sucessão e Governança Familiar</title>
-  <meta name="description" content="Advocacia empresarial e familiar: contratos personalizados, planejamento sucessório e governança intergeracional para empresas e famílias empresárias." />
+  <meta name="description" content="Advocacia empresarial e familiar: contratos personalizados, planejamento sucessório e governança intergeracional para empresas e famílias empresárias.">
 
   <!-- SEO / OG / Twitter -->
-  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="pt-BR" />
-  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="en" />
-  <link rel="canonical" href="https://malcantara.adv.br/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="MA – Inteligência Jurídica" />
-  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias." />
-  <meta property="og:url" content="https://malcantara.adv.br/" />
-  <meta property="og:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
-  <meta property="og:locale" content="pt_BR" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="MA – Inteligência Jurídica" />
-  <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência." />
-  <meta name="twitter:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
+  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="pt-BR">
+  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="en">
+  <link rel="canonical"  href="https://malcantara.adv.br/">
+  <meta property="og:type"        content="website">
+  <meta property="og:title"       content="MA – Inteligência Jurídica">
+  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias.">
+  <meta property="og:url"         content="https://malcantara.adv.br/">
+  <meta property="og:image"       content="https://malcantara.adv.br/public/assets/logo.svg">
+  <meta property="og:locale"      content="pt_BR">
+  <meta name="twitter:card"        content="summary_large_image">
+  <meta name="twitter:title"       content="MA – Inteligência Jurídica">
+  <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência.">
+  <meta name="twitter:image"       content="https://malcantara.adv.br/public/assets/logo.svg">
 
   <!-- Performance -->
-  <link rel="preconnect" href="https://www.googletagmanager.com" />
-  <link rel="preload" href="public/assets/logo.svg" as="image" />
-  <link rel="icon" href="public/assets/logo.svg" type="image/svg+xml" />
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="preload"    href="public/assets/logo.svg" as="image">
+  <link rel="icon"       href="public/assets/logo.svg" type="image/svg+xml">
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- AOS -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
   <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXCNKTCY5"></script>
   <script>
-    window.dataLayer = window.dataLayer || []
-    function gtag() { dataLayer.push(arguments) }
-    gtag('js', new Date())
-    gtag('config', 'G-FNXCNKTCY5')
+    window.dataLayer=window.dataLayer||[];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js',new Date());
+    gtag('config','G-FNXCNKTCY5');
   </script>
 
   <!-- JSON-LD -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "LegalService",
-    "name": "MA – Inteligência Jurídica",
-    "url": "https://malcantara.adv.br/",
-    "logo": "https://malcantara.adv.br/public/assets/logo.svg",
-    "image": "https://malcantara.adv.br/public/assets/logo.svg",
-    "description": "Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
-    "telephone": "+55-38-98416-4737",
-    "email": "contato@malcantara.adv.br",
+    "@context":"https://schema.org",
+    "@type":"LegalService",
+    "name":"MA – Inteligência Jurídica",
+    "url":"https://malcantara.adv.br/",
+    "logo":"https://malcantara.adv.br/public/assets/logo.svg",
+    "image":"https://malcantara.adv.br/public/assets/logo.svg",
+    "description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
+    "telephone":"+55-38-98416-4737",
+    "email":"contato@malcantara.adv.br",
     "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Rua Áustria, 61 – Ibituruna",
-      "addressLocality": "Montes Claros",
-      "addressRegion": "MG",
-      "postalCode": "39402-145",
-      "addressCountry": "BR"
+      "@type":"PostalAddress",
+      "streetAddress":"Rua Áustria, 61 – Ibituruna",
+      "addressLocality":"Montes Claros",
+      "addressRegion":"MG",
+      "postalCode":"39402-145",
+      "addressCountry":"BR"
     },
     "founder": {
-      "@type": "Person",
-      "name": "Maurício Alcântara"
+      "@type":"Person",
+      "name":"Maurício Alcântara"
     }
   }
   </script>
@@ -75,14 +75,14 @@
   <!-- HEADER -->
   <header class="bg-white shadow-md fixed w-full z-50">
     <div class="max-w-7xl mx-auto flex items-center justify-between py-3 px-6">
-      <a href="/"><img src="public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-[120px] w-auto" /></a>
-      <nav class="space-x-6 font-semibold text-[#002B5C] flex items-center">
-        <a href="#servicos" class="hover:text-[#C5A268]" data-i18n="menu_services">Serviços</a>
+      <a href="/"><img src="public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-[120px] w-auto"></a>
+      <nav class="flex items-center space-x-6 font-semibold text-[#002B5C]">
+        <a href="#servicos"    class="hover:text-[#C5A268]" data-i18n="menu_services">Serviços</a>
         <a href="#metodologia" class="hover:text-[#C5A268]" data-i18n="menu_method">Metodologia</a>
-        <a href="#sobre" class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
-        <a href="#contato" class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
-        <a href="/blog.html" target="_blank" class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
-        <div class="border-l pl-4 ml-2">
+        <a href="#sobre"       class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
+        <a href="#contato"     class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
+        <a href="/blog.html"   target="_blank" class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
+        <div class="border-l pl-4 ml-2 flex items-center">
           <button onclick="setLang('pt')" class="px-1">PT</button> |
           <button onclick="setLang('en')" class="px-1">EN</button>
         </div>
@@ -91,25 +91,13 @@
   </header>
 
   <!-- HERO -->
-  <section
-    class="pt-32 pb-16 bg-cover bg-center text-white text-center"
-    style="background-image: url('public/assets/banner.jpg');"
-  >
-    <div
-      class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6 backdrop-brightness-75 py-16"
-      data-aos="fade-down"
-    >
+  <section class="pt-32 pb-16 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white text-center">
+    <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
       <h1 class="text-4xl font-bold" data-i18n="hero_title">Inteligência Jurídica com Propósito</h1>
-      <p class="text-xl max-w-2xl" data-i18n="hero_sub">
-        Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.
-      </p>
-      <a
-        href="https://wa.me/5538984164737"
-        class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90"
-        data-i18n="cta_diag"
-      >
-        Agendar Diagnóstico
-      </a>
+      <p class="text-xl max-w-2xl" data-i18n="hero_sub">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
+      <a href="https://wa.me/5538984164737"
+         class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90"
+         data-i18n="cta_diag">Agendar Diagnóstico</a>
     </div>
   </section>
 
@@ -118,26 +106,32 @@
     <div class="max-w-6xl mx-auto">
       <h2 class="text-3xl font-bold mb-10 text-center" data-i18n="services_title">Nossos Serviços</h2>
       <div class="grid md:grid-cols-3 gap-10">
-        <!-- Contratos -->
+        <!-- card 1 -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
-            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24"><path d="M16 2H8a2 2 0 0 0-2 2v16l6-3 6 3V4a2 2 0 0 0-2-2Z"/></svg>
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M16 2H8a2 2 0 0 0-2 2v16l6-3 6 3V4a2 2 0 0 0-2-2Z"/>
+            </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_contracts_h">Contratos Empresariais</h3>
           <p data-i18n="service_contracts_p">Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
         </div>
-        <!-- Sucessão -->
+        <!-- card 2 -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="100">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
-            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24"><path d="M12 7a5 5 0 1 0 0-2 5 5 0 0 0 0 2Zm7 6a7 7 0 0 1-14 0H3a9 9 0 0 0 18 0Z"/></svg>
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12 7a5 5 0 1 0 0-2 5 5 0 0 0 0 2Zm7 6a7 7 0 0 1-14 0H3a9 9 0 0 0 18 0Z"/>
+            </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_succession_h">Planejamento Sucessório</h3>
           <p data-i18n="service_succession_p">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
         </div>
-        <!-- Governança -->
+        <!-- card 3 -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="200">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
-            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24"><path d="M4 4h16v2H4zm2 4h12v2H6zm4 4h8v2h-8zm2 4h4v2h-4z"/></svg>
+            <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M4 4h16v2H4zm2 4h12v2H6zm4 4h8v2h-8zm2 4h4v2h-4z"/>
+            </svg>
           </div>
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_governance_h">Governança Familiar</h3>
           <p data-i18n="service_governance_p">Estruturação de acordos, protocolos e governança intergeracional.</p>
@@ -150,15 +144,19 @@
   <section id="metodologia" class="py-20 px-6 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white scroll-mt-32">
     <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6" data-i18n="method_title">Nossa Metodologia</h2>
-      <p class="text-lg" data-i18n="method_text">Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência em cada entrega jurídica, aliando tecnologia e escuta qualificada.</p>
+      <p class="text-lg" data-i18n="method_text">
+        Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência...
+      </p>
     </div>
   </section>
 
   <!-- SOBRE -->
-  <section id="sobre" class="py-20 px-6 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white scroll-mt-32">
+  <section id="sobre" class="py-20 px-6 bg-white text-[#0F172A] scroll-mt-32">
     <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6" data-i18n="about_title">Quem Somos</h2>
-      <p class="text-lg" data-i18n="about_text">A MA nasceu para romper com a advocacia genérica. Criamos soluções sob medida, orientadas por propósito, técnica e inteligência artificial aplicada. Liderada por Maurício Alcântara, especialista em direito empresarial e sucessório, nossa equipe atua com excelência e humanidade.</p>
+      <p class="text-lg" data-i18n="about_text">
+        A MA nasceu para romper com a advocacia genérica. Criamos soluções sob medida, orientadas por propósito, técnica e inteligência artificial aplicada.
+      </p>
     </div>
   </section>
 
@@ -167,9 +165,9 @@
     <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6" data-i18n="contact_title">Fale Conosco</h2>
       <form action="https://formspree.io/f/mayvgkrl" method="POST" class="space-y-6">
-        <input name="nome" type="text" required placeholder="Seu nome" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name" />
-        <input name="email" type="email" required placeholder="Seu e-mail" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email" />
-        <textarea name="mensagem" required placeholder="Sua mensagem" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
+        <input name="nome" type="text" required placeholder="" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name">
+        <input name="email" type="email" required placeholder="" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email">
+        <textarea name="mensagem" required placeholder="" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
         <button type="submit" class="bg-[#002B5C] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]" data-i18n="contact_send">Enviar</button>
       </form>
     </div>
@@ -193,15 +191,12 @@
 
   <!-- i18n + AOS -->
   <script>
-    function setLang(l) {
-      localStorage.setItem('lang', l);
-      location.reload();
-    }
+    function setLang(l){ localStorage.setItem('lang',l); location.reload(); }
     window.addEventListener('DOMContentLoaded', async () => {
       const lang = localStorage.getItem('lang') || 'pt';
       document.documentElement.lang = lang;
       try {
-        const tr = await fetch('./i18n/' + lang + '.json').then(r => r.json());
+        const tr = await fetch('./i18n/'+lang+'.json').then(r=>r.json());
         document.querySelectorAll('[data-i18n]').forEach(el => {
           const k = el.dataset.i18n;
           if (tr[k]) el.textContent = tr[k];
@@ -210,8 +205,10 @@
           const k = el.dataset.i18nPlaceholder;
           if (tr[k]) el.placeholder = tr[k];
         });
-      } catch (e) { console.warn('i18n error', e); }
-      AOS.init({ duration: 700, once: true });
+      } catch(e) {
+        console.warn('i18n error', e);
+      }
+      AOS.init({ duration:700, once:true });
     });
   </script>
 </body>
