--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-i18n="title">MA – Inteligência Jurídica | Contratos, Sucessão e Governança Familiar</title>
-  <meta name="description" content="Advocacia empresarial e familiar: contratos personalizados, planejamento sucessório e governança intergeracional para empresas e famílias empresárias.">
+  <meta name="description" content="Advocacia empresarial e familiar: contratos personalizados, planejamento sucessório e governança intergeracional para empresas e famílias empresárias." />
 
   <!-- SEO / OG / Twitter -->
-  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="pt-BR">
-  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="en">
-  <link rel="canonical"  href="https://malcantara.adv.br/">
-  <meta property="og:type"        content="website">
-  <meta property="og:title"       content="MA – Inteligência Jurídica">
-  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias.">
-  <meta property="og:url"         content="https://malcantara.adv.br/">
-  <meta property="og:image"       content="https://malcantara.adv.br/public/assets/logo.svg">
-  <meta property="og:locale"      content="pt_BR">
-  <meta name="twitter:card"        content="summary_large_image">
-  <meta name="twitter:title"       content="MA – Inteligência Jurídica">
-  <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência.">
-  <meta name="twitter:image"       content="https://malcantara.adv.br/public/assets/logo.svg">
+  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="pt-BR" />
+  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="en" />
+  <link rel="canonical" href="https://malcantara.adv.br/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="MA – Inteligência Jurídica" />
+  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias." />
+  <meta property="og:url" content="https://malcantara.adv.br/" />
+  <meta property="og:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
+  <meta property="og:locale" content="pt_BR" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="MA – Inteligência Jurídica" />
+  <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência." />
+  <meta name="twitter:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
 
   <!-- Performance -->
-  <link rel="preconnect" href="https://www.googletagmanager.com">
-  <link rel="preload"    href="public/assets/logo.svg" as="image">
-  <link rel="icon"       href="public/assets/logo.svg" type="image/svg+xml">
+  <link rel="preconnect" href="https://www.googletagmanager.com" />
+  <link rel="preload" href="public/assets/logo.svg" as="image" />
+  <link rel="icon" href="public/assets/logo.svg" type="image/svg+xml" />
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- AOS -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
   <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXCNKTCY5"></script>
   <script>
-    window.dataLayer=window.dataLayer||[];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js',new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
     gtag('config','G-FNXCNKTCY5');
   </script>
 
@@ -54,7 +54,7 @@
     "description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
     "telephone":"+55-38-98416-4737",
     "email":"contato@malcantara.adv.br",
-    "address": {
+    "address":{
       "@type":"PostalAddress",
       "streetAddress":"Rua Áustria, 61 – Ibituruna",
       "addressLocality":"Montes Claros",
@@ -62,10 +62,7 @@
       "postalCode":"39402-145",
       "addressCountry":"BR"
     },
-    "founder": {
-      "@type":"Person",
-      "name":"Maurício Alcântara"
-    }
+    "founder":{"@type":"Person","name":"Maurício Alcântara"}
   }
   </script>
 </head>
@@ -75,13 +72,13 @@
   <!-- HEADER -->
   <header class="bg-white shadow-md fixed w-full z-50">
     <div class="max-w-7xl mx-auto flex items-center justify-between py-3 px-6">
-      <a href="/"><img src="public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-[120px] w-auto"></a>
-      <nav class="flex items-center space-x-6 font-semibold text-[#002B5C]">
+      <a href="/"><img src="public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-[120px] w-auto" /></a>
+      <nav class="flex items-center space-x-6 font-semibold text-[#0C2A52]">
         <a href="#servicos"    class="hover:text-[#C5A268]" data-i18n="menu_services">Serviços</a>
         <a href="#metodologia" class="hover:text-[#C5A268]" data-i18n="menu_method">Metodologia</a>
         <a href="#sobre"       class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
         <a href="#contato"     class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
-        <a href="/blog.html"   target="_blank" class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
+        <a href="blog.html"    target="_blank" rel="noopener" class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
         <div class="border-l pl-4 ml-2 flex items-center">
           <button onclick="setLang('pt')" class="px-1">PT</button> |
           <button onclick="setLang('en')" class="px-1">EN</button>
@@ -90,14 +87,29 @@
     </div>
   </header>
 
-  <!-- HERO -->
-  <section class="pt-32 pb-16 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white text-center">
-    <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
+  <!-- Spacer for fixed header -->
+  <div class="h-16"></div>
+
+  <!-- HERO (imagem de fundo) -->
+  <section
+    class="pt-32 pb-16 bg-cover bg-center text-white text-center"
+    style="background-image: url('public/assets/banner.jpg');"
+  >
+    <div
+      class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6 backdrop-brightness-75 py-16"
+      data-aos="fade-down"
+    >
       <h1 class="text-4xl font-bold" data-i18n="hero_title">Inteligência Jurídica com Propósito</h1>
-      <p class="text-xl max-w-2xl" data-i18n="hero_sub">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
-      <a href="https://wa.me/5538984164737"
-         class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90"
-         data-i18n="cta_diag">Agendar Diagnóstico</a>
+      <p class="text-xl max-w-2xl" data-i18n="hero_sub">
+        Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.
+      </p>
+      <a
+        href="https://wa.me/5538984164737"
+        class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90"
+        data-i18n="cta_diag"
+      >
+        Agendar Diagnóstico
+      </a>
     </div>
   </section>
 
@@ -106,7 +118,7 @@
     <div class="max-w-6xl mx-auto">
       <h2 class="text-3xl font-bold mb-10 text-center" data-i18n="services_title">Nossos Serviços</h2>
       <div class="grid md:grid-cols-3 gap-10">
-        <!-- card 1 -->
+        <!-- Contratos -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
             <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
@@ -116,7 +128,7 @@
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_contracts_h">Contratos Empresariais</h3>
           <p data-i18n="service_contracts_p">Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
         </div>
-        <!-- card 2 -->
+        <!-- Sucessão -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="100">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
             <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
@@ -126,7 +138,7 @@
           <h3 class="text-xl font-semibold mb-2" data-i18n="service_succession_h">Planejamento Sucessório</h3>
           <p data-i18n="service_succession_p">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
         </div>
-        <!-- card 3 -->
+        <!-- Governança -->
         <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md" data-aos="fade-up" data-aos-delay="200">
           <div class="w-12 h-12 mb-4 inline-flex items-center justify-center rounded-full bg-[#C5A268]/20">
             <svg class="w-6 h-6 text-[#C5A268]" fill="currentColor" viewBox="0 0 24 24">
@@ -141,11 +153,11 @@
   </section>
 
   <!-- METODOLOGIA -->
-  <section id="metodologia" class="py-20 px-6 bg-gradient-to-r from-[#002B5C] to-[#0A3D91] text-white scroll-mt-32">
+  <section id="metodologia" class="py-20 px-6 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white scroll-mt-32">
     <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6" data-i18n="method_title">Nossa Metodologia</h2>
       <p class="text-lg" data-i18n="method_text">
-        Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência...
+        Aplicamos a lógica da Base Viva: Especialização, Autoridade, Oportunidade, Personalidade e Ambiência em cada entrega jurídica, aliando tecnologia e escuta qualificada.
       </p>
     </div>
   </section>
@@ -165,16 +177,16 @@
     <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6" data-i18n="contact_title">Fale Conosco</h2>
       <form action="https://formspree.io/f/mayvgkrl" method="POST" class="space-y-6">
-        <input name="nome" type="text" required placeholder="" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name">
-        <input name="email" type="email" required placeholder="" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email">
-        <textarea name="mensagem" required placeholder="" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
-        <button type="submit" class="bg-[#002B5C] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]" data-i18n="contact_send">Enviar</button>
+        <input name="nome" type="text" required placeholder="Seu nome" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name" />
+        <input name="email" type="email" required placeholder="Seu e-mail" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email" />
+        <textarea name="mensagem" required placeholder="Sua mensagem" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
+        <button type="submit" class="bg-[#0C2A52] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]" data-i18n="contact_send">Enviar</button>
       </form>
     </div>
   </section>
 
   <!-- RODAPÉ -->
-  <footer class="bg-[#002B5C] text-white text-sm py-6">
+  <footer class="bg-[#0C2A52] text-white text-sm py-6">
     <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between gap-4">
       <div>
         <p>© 2025 MA – Inteligência Jurídica</p>
@@ -196,7 +208,7 @@
       const lang = localStorage.getItem('lang') || 'pt';
       document.documentElement.lang = lang;
       try {
-        const tr = await fetch('./i18n/'+lang+'.json').then(r=>r.json());
+        const tr = await fetch('./i18n/'+lang+'.json').then(r => r.json());
         document.querySelectorAll('[data-i18n]').forEach(el => {
           const k = el.dataset.i18n;
           if (tr[k]) el.textContent = tr[k];
@@ -205,9 +217,7 @@
           const k = el.dataset.i18nPlaceholder;
           if (tr[k]) el.placeholder = tr[k];
         });
-      } catch(e) {
-        console.warn('i18n error', e);
-      }
+      } catch(e) { console.warn('i18n error', e); }
       AOS.init({ duration:700, once:true });
     });
   </script>
